build in Java 16+ fix for Project Lombok